--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "description": "File manager marionette.js",
   "keywords": [
     "file",
+    "nks-file-manager",
     "manager",
     "marionette",
     "tinymce"
