--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "nks-file-manager",
-  "version": "0.9.1",
+  "version": "1.0.0",
   "homepage": "https://github.com/konstantin-nizhinskiy/FileManager",
   "authors": [
     "Konstantin Nizhinskiy <konstantin.nizhinskiy@gmail.com>"
@@ -12,13 +12,17 @@
     "manager",
     "marionette",
     "tinymce"
-
-
   ],
   "license": "MIT",
   "dependencies": {
-      "marionette": ">=2.4.4"
+    "marionette": "3.*",
+    "backbone": "^1.3.3",
+    "jquery": "^3.1.1"
   },
+  "devDependencies": {
+    "require": "http://requirejs.org/docs/release/2.2.0/minified/require.js"
+  },
+
   "ignore": [
     "**/.*",
     "node_modules",
